[package]
name = "fuse-zstd"
version = "0.2.1"
edition = "2021"
authors = ["Stepan Henek <stepan@bigdigdata.com>"]
license = "MIT"
readme = "README.md"
keywords = ["fuse", "zstd"]
repository = "https://gitlab.com/big-dig-data/fuse-zstd/"
categories = ["filesystem"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
with_disk_inode_cache = [
	"sled"
]
with_sentry = [
	"sentry"
]

[dependencies]
clap = "2"
env_logger = "0.8"
fuser = "0.9"
libc = "0.2.108"
log = "0.4"
lru_time_cache = "0.11"
sentry = { version = "0.23.0", features = ["log"], optional = true }
sentry-log = "0.23.0"
sled = { version = "0.34", optional = true}
tempfile = "3"
xattr = "0.2"
zstd = "0.9"

[dev-dependencies]
rstest = "0.11"
assert_cmd = "2.0"
proc-mounts = "0.2"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
depends = "fuse3,libfuse3-3,libc6"
section = "otherosfs"
priority = "optional"
features = ["sentry"]
assets = [
    ["debian/fuse-zstd.env", "etc/conf.d/", "644"],
    ["target/release/fuse-zstd", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fuse-zstd/README", "644"],
]
conf-files = ["etc/conf.d/fuse-zstd.env"]
