[package]
name = "fuse-zstd"
version = "1.2.0"
edition = "2021"
authors = ["Stepan Henek <stepan@bigdigdata.com>"]
license = "MIT"
readme = "README.md"
keywords = ["fuse", "zstd"]
repository = "https://github.com/Big-Dig-Data/fuse-zstd"
categories = ["filesystem"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
with_sentry = [
    "sentry",
    "sentry-log",
]

[dependencies]
clap = { version="4", features = ["env", "cargo"] }
env_logger = "0.11"
fuser = "0.14"
libc = "0.2"
log = "0.4"
sentry = { version = "0.32", features = ["log"], optional = true }
sentry-log = { version = "0.32", optional = true }
sled = "0.34"
tempfile = "3"
xattr = "1.3"
zstd = "0.13"

[dev-dependencies]
rstest = "0.18"
assert_cmd = "2.0"
proc-mounts = "0.3"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
depends = "fuse3,libfuse3-3,libc6"
section = "otherosfs"
priority = "optional"
features = ["with_sentry"]
assets = [
    ["debian/fuse-zstd.env", "etc/conf.d/", "644"],
    ["target/release/fuse-zstd", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/fuse-zstd/README", "644"],
]
conf-files = ["etc/conf.d/fuse-zstd.env"]
